# axiom-physics-engine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  BUILDING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  LICENSE  Makefile  README.md  build-ninja.bat  codecov.yml  configure-ninja.bat  justfile  vcpkg.json
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
benchmarks/: CMakeLists.txt  pool_allocator_benchmark.cpp
benchmarks/memory/: linear_allocator_benchmark.cpp  stack_allocator_benchmark.cpp
cmake/: axiomConfig.cmake.in  axiom_core.pc.in  axiom_math.pc.in
examples/: CMakeLists.txt  body_inspector_example.cpp  command_buffer_example.cpp  memory_tracker_example.cpp  physics_panel_example.cpp  profiling_example.cpp  transform_example.cpp  vk_test.cpp
include/axiom/core/: assert.hpp  error_code.hpp  logger.hpp  profiler.hpp  result.hpp  version.hpp
include/axiom/core/threading/: job_system.hpp  work_stealing_queue.hpp
include/axiom/debug/: debug_draw.hpp  physics_debug_draw.hpp
include/axiom/frontend/: window.hpp
include/axiom/gpu/: framebuffer.hpp  gpu_buffer.hpp  render_pass.hpp  vk_command.hpp  vk_compute_pipeline.hpp  vk_descriptor.hpp  vk_graphics_pipeline.hpp  vk_instance.hpp  vk_memory.hpp  vk_shader.hpp  vk_swapchain.hpp  vk_sync.hpp
include/axiom/gui/: body_inspector.hpp  imgui_impl.hpp  physics_panel.hpp
include/axiom/math/: aabb.hpp  constants.hpp  mat4.hpp  quat.hpp  random.hpp  transform.hpp  utils.hpp  vec2.hpp  vec3.hpp  vec4.hpp  vec_ops.hpp
include/axiom/memory/: allocator.hpp  heap_allocator.hpp  linear_allocator.hpp  memory_tracker.hpp  pool_allocator.hpp  stack_allocator.hpp  stl_adapter.hpp
shaders/: README.md
shaders/debug/: line.frag.spv  line.slang  line.vert.spv
shaders/test/: array_add.comp  array_add.slang  simple.comp  simple.comp.spv  simple.slang
specs/: assertion_system.md
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  assert.cpp  error_code.cpp  logger.cpp  version.cpp
src/core/threading/: job_system.cpp
src/debug/: CMakeLists.txt  debug_draw.cpp  physics_debug_draw.cpp
src/frontend/: CMakeLists.txt  window.cpp
src/gpu/: CMakeLists.txt  framebuffer.cpp  gpu_buffer.cpp  render_pass.cpp  vk_command.cpp  vk_compute_pipeline.cpp  vk_descriptor.cpp  vk_graphics_pipeline.cpp  vk_instance.cpp  vk_memory.cpp  vk_shader.cpp  vk_swapchain.cpp  vk_sync.cpp
src/gui/: CMakeLists.txt  body_inspector.cpp  imgui_impl.cpp  physics_panel.cpp
src/math/: CMakeLists.txt  aabb.cpp  mat4.cpp  math_placeholder.cpp  quat.cpp  transform.cpp
src/memory/: CMakeLists.txt  default_allocator.cpp  heap_allocator.cpp  linear_allocator.cpp  memory_tracker.cpp  stack_allocator.cpp
tests/: CMakeLists.txt
tests/core/: assert_test.cpp  error_code_test.cpp  logger_test.cpp  result_test.cpp  test_profiler.cpp
tests/core/threading/: job_system_test.cpp
tests/debug/: debug_draw_test.cpp  physics_debug_draw_test.cpp
tests/frontend/: window_test.cpp
tests/gpu/: framebuffer_test.cpp  gpu_buffer_test.cpp  render_pass_test.cpp  test_compute.cpp  vk_command_test.cpp  vk_compute_pipeline_test.cpp  vk_descriptor_test.cpp  vk_graphics_pipeline_test.cpp  vk_instance_test.cpp  vk_memory_test.cpp  vk_shader_test.cpp  vk_swapchain_test.cpp  vk_sync_test.cpp
tests/gui/: body_inspector_test.cpp  imgui_renderer_test.cpp  physics_panel_test.cpp
tests/math/: aabb_test.cpp  mat4_quat_integration_test.cpp  mat4_test.cpp  quat_test.cpp  random_test.cpp  test_vec.cpp  test_vec_ops.cpp  transform_test.cpp  utils_test.cpp
tests/memory/: allocator_test.cpp  linear_allocator_test.cpp  memory_tracker_test.cpp  pool_allocator_test.cpp  stack_allocator_test.cpp  stl_adapter_test.cpp
