# Axiom source directory
# This file will be populated as modules are implemented

# Placeholder comment to satisfy CMake
# Subdirectories will be added as they are created:
# add_subdirectory(core)
# add_subdirectory(math)
# add_subdirectory(memory)
# add_subdirectory(collision)
# add_subdirectory(dynamics)
# add_subdirectory(softbody)
# add_subdirectory(fluid)
# add_subdirectory(gpu)

message(STATUS "Source directory configured (modules will be added in future phases)")
